# CMake_Tutorials_Repository

./: abc.cpp  deprecated_var_demo.cmake  fizzbuzz.cmake  func_macro_demo.cmake  myfunc.cmake
CMake_Boost/: CMakeLists.txt  do this .txt  example.cpp  run.sh
CMake_Coding/: CMakeCache.txt  CMakeLists.txt  main.cpp
CMake_Coding/platform/: CMakeLists.txt
CMake_Coding/platform/include/: editor.h  language.h
CMake_Coding/platform/src/: editor.cpp  language.cpp
CMake_Computation/: CMakeLists.txt  do_this_new.txt  main.cpp
CMake_Computation/Computation_lib/: CMakeLists.txt
CMake_Computation/Computation_lib/include/: computation_file.h
CMake_Computation/build_cmake/: CMakeCache.txt
CMake_Computation/cmake/CMake_Computation/: CMake_ComputationConfig.cmake
CMake_Computation/install/lib/: Computation_lib.lib
CMake_Computation_Redo/: CMakeLists.txt  do_this_new.txt
CMake_Computation_Redo/Computation_lib/: CMakeLists.txt
CMake_Computation_Redo/app/: CMakeLists.txt  main.cpp
CMake_Computation_Redo/install/include/: computation_file.h
CMake_Computation_Redo/lib/: Computation_lib.lib
CMake_Example/: CMakeList.txt  CMakeLists.txt  calculator.h  how_to_run_CMAKE.txt  main.cpp
CMake_Example/install/lib/: Computation_lib.lib  Library.lib
CMake_Example/lib/: Library.lib
CMake_Example_Redo/: CMakeLists.txt
CMake_Export_Lib/Computation_lib/: CMakeLists.txt
CMake_Export_Lib/Computation_lib/src/: computation_file.cpp
CMake_Hello_World/: CMakeLists.txt  main.cpp
CMake_Image_Proceessing/: CMakeLists.txt  do_this.txt  main.cpp
Static_and_Dynamic_Linking/: Static_File_Tutorial.docx
Static_and_Dynamic_Linking/Demo/: Demo.sln
Static_and_Dynamic_Linking/Demo/Debug/: Demo.ilk  Demo1.lib  Demo2.lib
Static_and_Dynamic_Linking/Demo/Demo/: Demo.vcxproj  main.cpp
Static_and_Dynamic_Linking/Demo/Demo/Debug/: Demo.pch  vc141.idb
Static_and_Dynamic_Linking/Demo/Demo/Debug/Demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Static_and_Dynamic_Linking/Demo/Demo/Release/: Demo.pch
Static_and_Dynamic_Linking/Demo/Demo/Release/Demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Demo.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Static_and_Dynamic_Linking/Demo/Demo1/: Demo1.vcxproj  Demo1.vcxproj.filters  class1.cpp  class1.h  maths1.cpp  maths1.h
Static_and_Dynamic_Linking/Demo/Demo1/Debug/: Demo1.idb  Demo1.pch
Static_and_Dynamic_Linking/Demo/Demo1/Debug/Demo1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Static_and_Dynamic_Linking/Demo/Demo1/Release/: Demo1.pch
Static_and_Dynamic_Linking/Demo/Demo1/Release/Demo1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Static_and_Dynamic_Linking/Demo/Demo2/: Demo2.vcxproj  Demo2.vcxproj.filters  class2.cpp  class2.h  maths2.cpp  maths2.h
Static_and_Dynamic_Linking/Demo/Demo2/Debug/: Demo2.idb  Demo2.pch
Static_and_Dynamic_Linking/Demo/Demo2/Debug/Demo2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Demo2.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+1 more)
Static_and_Dynamic_Linking/Demo/Demo2/Release/: Demo2.pch
Static_and_Dynamic_Linking/Demo/Release/: Demo.iobj  Demo.ipdb  Demo1.lib  Demo2.lib
Static_and_Dynamic_Linking/MathLibrary/: MathLibrary.sln
Static_and_Dynamic_Linking/MathLibrary/Debug/: MathClient.ilk  MathLibrary.exp  MathLibrary.ilk  MathLibrary.lib
Static_and_Dynamic_Linking/MathLibrary/MathClient/: MathClient.cpp  MathClient.vcxproj
Static_and_Dynamic_Linking/MathLibrary/MathClient/Debug/: MathClient.pch  vc141.idb
Static_and_Dynamic_Linking/MathLibrary/MathLibrary/: MathLibrary.cpp  MathLibrary.vcxproj
Static_and_Dynamic_Linking/MathLibrary/MathLibrary/Debug/: vc141.idb
Static_and_Dynamic_Linking/PUBG/: PUBG.sln
Static_and_Dynamic_Linking/PUBG/Debug/: ENGINE.ilk
Static_and_Dynamic_Linking/PUBG/ENGINE/: ENGINE.vcxproj  ENGINE.vcxproj.filters  runner.cpp  runner.h
Static_and_Dynamic_Linking/PUBG/ENGINE/Debug/: ENGINE.pch  vc141.idb
Static_and_Dynamic_Linking/PUBG/GAME/: GAME.vcxproj  main.cpp
Static_and_Dynamic_Linking/PUBG/GAME/Debug/: GAME.pch  vc141.idb
Static_and_Dynamic_Linking/Trail2/phase1/: phase1.sln
Static_and_Dynamic_Linking/Trail2/phase1/Debug/: phase1.ilk  phase2.lib
Static_and_Dynamic_Linking/Trail2/phase1/Release/: phase1.iobj  phase1.ipdb  phase2.lib
Static_and_Dynamic_Linking/Trail2/phase1/phase1/: main.cpp  phase1.vcxproj
Static_and_Dynamic_Linking/Trail2/phase1/phase2/: maths.cpp  maths.h  phase2.vcxproj  phase2.vcxproj.filters
Static_and_Dynamic_Linking/Types_of_files/: lib_mylib.c  lib_mylib.cpp  lib_mylib.h
Static_and_Dynamic_Linking/how_to_make_files/: how_to_make_files.sln
Static_and_Dynamic_Linking/how_to_make_files/Debug/: Project_A.lib  how_to_make_files.ilk
Static_and_Dynamic_Linking/how_to_make_files/Project_A/: Proj_A_class.h  Project_A.vcxproj
Static_and_Dynamic_Linking/how_to_make_files/Project_A/Debug/: Project_A.idb  Project_A.pch
Static_and_Dynamic_Linking/how_to_make_files/how_to_make_files/: main.cpp
Static_and_Dynamic_Linking/how_to_make_files/how_to_make_files/Debug/: how_to_make_files.pch  vc141.idb
Static_and_Dynamic_Linking/test/Debug/: Project_A.exp  Project_A.ilk  Project_A.lib  how_to_make_files.ilk
Static_and_Dynamic_Linking/test/Project_A/: Proj_A_class.cpp  Proj_A_class.h  Project_A.vcxproj  Project_A.vcxproj.filters
Static_and_Dynamic_Linking/test/Project_A/Debug/: Project_A.idb  Project_A.pch  vc141.idb
Static_and_Dynamic_Linking/test/how_to_make_files/: how_to_make_files.vcxproj  main.cpp
Static_and_Dynamic_Linking/test/how_to_make_files/Debug/: how_to_make_files.pch  vc141.idb
Testing_CMake_Computation/: cmakeLists.txt  example.cpp
Tutorial/: CMakeCache.txt  TutorialConfig.h
Tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.h
libjsonutils/: CMakeLists.txt
moderncmake-master/sample01/src/: main.cpp
(+106 files in other folders)
